<resources>
    <string name="app_name">BookManagementSystem</string>
    <string name="app_name_cn">图书互换软件</string>
    <string name="label_copyright">Copyright © 2021–2022 BMS All rights reserved.</string>

    <string name="btn_text_reset">重置</string>
    <string name="btn_text_login">登录</string>
    <string name="rb_text_user">用户</string>
    <string name="rb_text_admin">管理员</string>
    <string name="tv_text_account">账号</string>
    <string name="tv_text_pwd">密码</string>

    <string name="tv_text_user_welcome">欢迎来到用户界面！</string>
    <string name="btn_text_find_book">查找图书</string>
    <string name="btn_text_view_borrow_book">互换书籍</string>
    <string name="btn_text_update_user_pwd">修改密码</string>
    <string name="btn_text_logout">退出登录</string>

    <string name="tv_text_add_book_welcome"></string>
    <string name="tv_text_book_id">图书编号</string>
    <string name="tv_text_book_name">图书名称</string>
    <string name="tv_text_book_number">图书数量</string>
    <string name="btn_text_save_info"></string>
    <string name="btn_text_cancel_add">取消添加</string>

    <string name="tv_text_add_user_welcome">添加用户信息</string>
    <string name="tv_text_id">账号</string>
    <string name="tv_text_name">姓名</string>
    <string name="tv_text_class_name">班级</string>
    <string name="tv_text_phone_number">手机</string>

    <string name="tv_text_book_balance">图书余额</string>
    <string name="tv_text_admin_welcome">欢迎来到管理员界面！</string>
    <string name="btn_text_user_info">用户信息</string>
    <string name="btn_text_book_info">图书信息</string>
    <string name="btn_text_book_borrow_info">图书互换信息</string>
    <string name="tv_text_book_manage_welcome">图书管理</string>
    <string name="tv_text_user_manage_welcome"></string>
    <string name="btn_text_view_book">查看书籍</string>
    <string name="btn_text_return">返回</string>
    <string name="btn_text_add_user">添加用户</string>
    <string name="btn_text_view_user">查看用户</string>
    <string name="tv_text_borrow_book_welcome">互换记录</string>
    <string name="tv_text_borrow_id">借书人账号</string>
    <string name="tv_text_borrow_book_id">图书编号</string>
    <string name="tv_text_borrow_book_name">图书名称</string>
    <string name="tv_text_user_id">我的账号</string>
    <string name="btn_text_exit">退出</string>
    <string name="tv_text_find_book_welcome">图书信息</string>
    <string name="tv_text_update_book_welcome">更新图书信息</string>
    <string name="btn_text_cancel_update">取消更新</string>
    <string name="tv_text_view_book_welcome">图书信息</string>
    <string name="tv_text_view_user_welcome">用户信息</string>
    <string name="tv_text_view_borrow_welcome">互换信息</string>
    <string name="tv_text_update_user_welcome">更新用户信息</string>
    <string name="btn_text_save_update">保存更新</string>
    <string name="tv_text_update_pwd_welcome">修改密码</string>
    <string name="tv_text_new_pwd">新的密码</string>
    <string name="tv_text_confirm_pwd">确认密码</string>
    <string name="btn_text_save">保存</string>
    <string name="btn_text_cancel">取消</string>

</resources>