<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/other_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.UserActivity"
    tools:viewBindingIgnore="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/tv_text_user_welcome"
                android:textSize="25sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="230dip"
                android:layout_marginTop="20dp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dip"
                    android:layout_gravity="bottom"
                    android:background="#33000000"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="@android:color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dip"
                        android:orientation="horizontal">

                        <View
                            android:id="@+id/dot_0"
                            android:layout_width="5dip"
                            android:layout_height="5dip"
                            android:layout_marginLeft="2dip"
                            android:layout_marginRight="2dip"
                            android:background="@drawable/book" />

                        <View
                            android:id="@+id/dot_1"
                            android:layout_width="5dip"
                            android:layout_height="5dip"
                            android:layout_marginLeft="2dip"
                            android:layout_marginRight="2dip"
                            android:background="@drawable/icon" />

                        <View
                            android:id="@+id/dot_2"
                            android:layout_width="5dip"
                            android:layout_height="5dip"
                            android:layout_marginLeft="2dip"
                            android:layout_marginRight="2dip"
                            android:background="@drawable/icon" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>


        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_find_book"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/tv_user_welcome"
                        android:layout_margin="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:text="@string/btn_text_find_book"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:cornerRadius="32dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_view_borrow_book"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/btn_find_book"
                        android:layout_margin="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:text="@string/btn_text_view_borrow_book"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:cornerRadius="32dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_update_user_pwd"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/btn_view_borrow_book"
                        android:layout_margin="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:text="@string/btn_text_update_user_pwd"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:cornerRadius="32dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_logout"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/btn_update_user_pwd"
                        android:layout_margin="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/white"
                        android:text="@string/btn_text_logout"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:cornerRadius="32dp" />
                </LinearLayout> <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_exchange"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/btn_view_borrow_book"
                    android:layout_margin="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="留言"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:cornerRadius="32dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_lo"
                    android:layout_width="0dp"
                    android:visibility="gone"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/btn_update_user_pwd"
                    android:layout_margin="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:text="@string/btn_text_logout"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:cornerRadius="32dp" />
            </LinearLayout>
            </LinearLayout>


        </ScrollView>



    </LinearLayout>


</RelativeLayout>
