<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/other_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.stbu.bookms.activity.AdminActivity">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_admin_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="管理员"
            android:textStyle="bold"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:scaleType="centerInside"
            android:src="@drawable/admin_shou" />

    </LinearLayout>

    <TextView
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:padding="8dp"
        android:text="退出"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_top">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#fff"
                android:paddingVertical="8dp"
                android:text="@string/btn_text_user_info"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:cornerRadius="4dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_book_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#fff"
                android:paddingVertical="8dp"
                android:text="@string/btn_text_book_info"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:cornerRadius="4dp" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_book_borrow_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#fff"
                android:paddingVertical="8dp"
                android:text="@string/btn_text_book_borrow_info"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:cornerRadius="4dp" />
            <!--            互换信息，促销，交流-->


<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:id="@+id/btn_exchange"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:backgroundTint="#fff"-->
<!--                android:paddingVertical="8dp"-->
<!--                android:text="互换信息"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="26sp"-->
<!--                android:textStyle="bold"-->
<!--                app:cornerRadius="4dp" />-->


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#fff"
                android:paddingVertical="8dp"
                android:text="促销（管理员）"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:cornerRadius="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#fff"
                android:paddingVertical="8dp"
                android:text="交流"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                app:cornerRadius="4dp" />


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
